--- a/index.html
+++ b/index.html
@@ -2001,8 +2001,8 @@
                          <img src="ai.jpg" alt="AI Visualization" class="mockup-img">
                      </div>
                      <div class="service-gallery" style="margin-top: 20px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                         <img src="ai.jpg" alt="AI Project 1" style="width: 100%; height: 80px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
-                         <img src="ai.jpg" alt="AI Project 2" style="width: 100%; height: 80px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                         <img src="AI Tools & Mode.jpg" alt="AI Project 1" style="width: 100%; height: 80px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                         <img src="AI ToolsModels.jfif" alt="AI Project 2" style="width: 100%; height: 80px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
                      </div>
                 </div>
             </div>
@@ -2181,7 +2181,7 @@
 
                 <!-- Project 11 - New -->
                 <div class="portfolio-item" data-category="ai" data-project="11">
-                    <img src="ai.jpg" alt="Project 11" class="portfolio-img">
+                    <img src="voice-recognition.jpg" alt="Project 11" class="portfolio-img">
                     <div class="portfolio-overlay">
                         <span class="category" data-en="AI Solution" data-ar="حل الذكاء الاصطناعي">AI Solution</span>
                         <h3 data-en="Voice Recognition System" data-ar="نظام التعرف على الصوت">Voice Recognition System</h3>
@@ -2256,7 +2256,7 @@
 
                 <!-- Project 15 - New -->
                 <div class="portfolio-item" data-category="ai" data-project="15">
-                    <img src="ai.jpg" alt="Project 15" class="portfolio-img">
+                    <img src="recognition.jpg" alt="Project 15" class="portfolio-img">
                     <div class="portfolio-overlay">
                         <span class="category" data-en="AI Solution" data-ar="حل الذكاء الاصطناعي">AI Solution</span>
                         <h3 data-en="Image Recognition API" data-ar="API التعرف على الصور">Image Recognition API</h3>
@@ -3645,3 +3645,4 @@
     <script src="portfolio-images.js"></script>
 </body>
 </html>
+
