--- a/index.html
+++ b/index.html
@@ -2540,7 +2540,7 @@
     <!-- Project Detail Modal -->
     <div id="projectModal" class="project-modal">
         <div class="modal-content">
-            <span class="modal-close" data-en="Close" data-ar="إغلاق">&times;</span>
+            <span class="modal-close" data-en="X" data-ar="X">&times;</span>
             <div class="modal-header">
                 <img id="modalImg" src="" alt="Project Image">
             </div>
@@ -3645,4 +3645,5 @@
     <script src="portfolio-images.js"></script>
 </body>
 </html>
+
 
